--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -4,26 +4,19 @@ on:
 
 jobs:
   build-tag:
-    runs-on: ubuntu-latest
-    steps:  
-    - name: List Files
-      run: |
-          pwd
-          ls -a
-          echo $GITHUB_SHA
-          echo $GITHUB_REPOSITORY
-          echo $GITHUB_WORKSPACE
-          echo "${{ github.token }}"
+    runs-on: ubuntu-20.04
+    steps:
     
     # Checking out latest koji-gh-action-git-version
     - name: Checkout Git Version
       uses: actions/checkout@v3
       with:
+        fetch-depth: 0
         repository: DaniaErnest/git-tag
         token: ${{ secrets.GIT_TOKEN }}
         path: ./.github/actions/koji-gh-action-git-gitversion
-        ref: refs/heads/main
-        fetch-depth: 0
+        ref: main
+        
     - name: List Files After Checkout
       run: |
           pwd
