--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout Git Version
       uses: actions/checkout@v3
       with:
-       repository: https://github.com/DaniaErnest/git-tag
+       repository: github.com/DaniaErnest/git-tag
        token: ${{ secrets.GIT_TOKEN }}
        path: ./.github/actions/koji-gh-action-git-gitversion
        ref: refs/heads/main
