--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,7 +1,8 @@
 name: Build-and-deploy
 on:
-  push:
-
+ pull_request:
+    types:
+      - opened
 jobs:
   build-tag:
     runs-on: ubuntu-20.04
@@ -11,7 +12,7 @@ jobs:
     - name: Checkout Git Version
       uses: actions/checkout@v3
       with:
-       repository: github.com/DaniaErnest/git-tag
+       repository: DaniaErnest/git-tag
        token: ${{ secrets.GIT_TOKEN }}
        path: ./.github/actions/koji-gh-action-git-gitversion
        ref: refs/heads/main
