--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -9,7 +9,6 @@ jobs:
   build-tag:
     runs-on: ubuntu-20.04
     steps:
-    
     # Checking out latest koji-gh-action-git-version
     - name: Checkout Git Version
       uses: actions/checkout@v3
@@ -17,7 +16,7 @@ jobs:
        repository: DaniaErnest/git-tag
        token: ${{ secrets.GIT_TOKEN }}
        path: ./.github/actions/koji-gh-action-git-gitversion
-       ref: refs/heads/main
+       ref: main
        fetch-depth: 0
         
     - name: List Files After Checkout
