--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,7 +16,7 @@ jobs:
        repository: DaniaErnest/git-tag
        token: ${{ secrets.GIT_TOKEN }}
        path: ./.github/actions/koji-gh-action-git-gitversion
-       ref: main
+       ref: v0
        fetch-depth: 0
         
     - name: List Files After Checkout
