--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,7 +1,7 @@
 name: Build-and-deploy
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -16,7 +16,7 @@ jobs:
        repository: DaniaErnest/git-tag
        token: ${{ secrets.GIT_TOKEN }}
        path: ./.github/actions/koji-gh-action-git-gitversion
-       ref: v0
+       ref: main
        fetch-depth: 0
         
     - name: List Files After Checkout
